# ultimate-tk-python

./: .gitignore  AGENTS.md  README.md  gymnasium_plan.md  pygame_plan.md  pyproject.toml  python_refactor.md  requirements.txt
docs/: release_verification.md
python/: .gitignore  README.md  pyproject.toml
python/docs/: release_verification.md
python/docs/notes/: phase10_root_flatten_cleanup.md  phase4_input_control.md  phase5_combat_entities.md  phase6_ui_progression.md  phase7_balancing_parity.md  phase8_regression_suite.md  phase9_data_release_hardening.md
python/game_data/: README.md  asset_manifest.json  asset_manifest_gap_list.md
python/src/ultimatetk/: __main__.py
python/src/ultimatetk/assets/: __init__.py  repository.py
python/src/ultimatetk/core/: app.py  boot_scene.py  config.py  context.py  events.py  fixed_step.py  input_script.py  logging_setup.py  paths.py  platform.py  scenes.py  session_store.py  state.py  terminal_input.py
python/src/ultimatetk/formats/: __init__.py  efp.py  lev.py
python/tests/integration/: test_headless_input_script_runtime.py  test_real_data_parse.py  test_real_data_render.py
python/tests/unit/: test_app_session_persistence.py  test_asset_repository.py  test_combat.py  test_fixed_step_clock.py  test_headless_platform_input.py  test_input_script.py  test_palette_tab_format.py  test_player_control.py  test_render_framebuffer.py  test_scene_flow.py  test_software_renderer.py  test_terminal_input.py
python/tools/: asset_manifest_report.py  format_probe.py  migrate_legacy_data.py  release_verification.py  render_probe.py
(+100 files in other folders)
