[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimatetk"
version = "0.1.0"
description = "Python refactor skeleton for The Ultimate TK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pygame = ["pygame>=2.5"]
ai = ["gymnasium>=0.29", "numpy>=1.26"]
ai_train = ["stable-baselines3>=2.5", "tensorboard>=2.14"]

[project.scripts]
ultimatetk = "ultimatetk.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
